tests/syntactic/printsize/printsize.err
Error: printsize qualifier already set in file printsize.dl at line 1
.decl A(x:number) printsize printsize
----------------------------^---------
1 errors generated, evaluation aborted
