tests/syntactic/printsize/printsize.dl
.decl A(x:number) printsize printsize
